fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body,
   width: 50%;
   height: 50%;
   height: 50vh;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .wrap {
